# backend/docs/swagger.json
@@ -15,6 +15,71 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/attendance/push/history": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "补卡"
+                ],
+                "summary": "查询补卡推送历史",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/attendance/push/manual": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "补卡"
+                ],
+                "summary": "手动触发补卡推送",
+                "parameters": [
+                    {
+                        "description": "请求参数",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.AttendancePushManualReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/attendance/records/delete": {
             "post": {
                 "security": [
@@ -775,6 +840,19 @@
         }
     },
     "definitions": {
+        "v1.AttendancePushManualReq": {
+            "type": "object",
+            "required": [
+                "month"
+            ],
+            "properties": {
+                "month": {
+                    "description": "月份",
+                    "type": "string",
+                    "example": "2026-02"
+                }
+            }
+        },
         "v1.AttendanceRecordDeleteReq": {
             "type": "object",
             "required": [
